small post-live changes

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Metrowall
+Theme Name: MetroWall
 Theme URI: https://metro-wall.com/
 Author: Creative Media
 Author URI: https://creativemediani.com/
