--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -5,6 +5,7 @@ $color__background-button: #e6e6e6;
 $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 
+$color_primary: #000;
 $color_secondary: #E30B18;
 
 $color__text-screen: #21759b;
